Fix link overflow

--- a/assets/scss/modules/_leaflet-popup-content.scss
+++ b/assets/scss/modules/_leaflet-popup-content.scss
@@ -60,7 +60,7 @@
 
   & &__link {
     @extend %single-line-ellipsis;
-    display: inline-block;
+    display: block;
     color: $purple;
     text-decoration: underline;
 
